bases/floci-oci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: floci-oci
  ports:
    - protocol: TCP
      port: 4599
      targetPort: api-port
